[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ifscube"
authors = [
    {name="Daniel Ruschel Dutra", email="daniel.ruschel@ufsc.br"}
]
version = "1.3"
requires-python = "~=3.12.0"
dependencies = [
    "numpy",
    "astropy",
    "matplotlib",
    "numba",
    "tqdm",
    "scipy",
    "h5py>=3.15.1",
]

[tool.setuptools]
include-package-data = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[project.scripts]
specfit = "ifscube.fitter:specfit"
cubefit = "ifscube.fitter:cubefit"
fit_rotation = "ifscube.rotation:main"
fit_scrutinizer = "ifscube.fit_scrutinizer:main"

[project.optional-dependencies]
docs = [
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
